force-app/main/default/objects/NavFlowRule__mdt/NavFlowRule__mdt.object-meta.xml
<CustomObject>
    <description>Contains navigation flow rules.</description>
    <label>Navigation Flow Rule</label>
    <pluralLabel>Navigation Flow Rules</pluralLabel>
</CustomObject>