force-app/main/default/objects/NavFlowRule__mdt/fields/RuleApexClassName__c.field-meta.xml
<CustomField>
    <fullName>RuleApexClassName__c</fullName>
    <description>Apex to execute to determine the conditions. The Apex must implement NavFlowRule interface or extend BasicNavFlowRule.
If rule apex class is entered then rule logic will be ignored and only the rule class will be executed.</description>
    <inlineHelpText>Apex to execute to determine the conditions. The Apex must implement NavFlowRule interface or extend BasicNavFlowRule.
If rule apex class is entered then rule logic will be ignored and only the rule class will be executed.</inlineHelpText>
    <label>Rule Apex Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>