force-app/main/default/objects/NavFlowRule__mdt/fields/RuleLogic__c.field-meta.xml
<CustomField>
    <fullName>RuleLogic__c</fullName>
    <description>Rule logic with simple object.field = value mapping.
Example:
Contact.Gender = Male

The logic will be dynamically executed and if the conditions are met then returns true.</description>
    <inlineHelpText>Rule logic with simple object.field = value mapping.
Example:
Contact.Gender = Male

The logic will be dynamically executed and if the conditions are met then returns true.</inlineHelpText>
    <label>Rule Logic</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>