force-app/main/default/objects/NavFlowRule__mdt/fields/RuleName__c.field-meta.xml
<CustomField>
    <fullName>RuleName__c</fullName>
    <description>Rule unique name.</description>
    <label>Rule Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>